// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IfStatement > client > should skip server if statements in non-async functions 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const example = () => {
  if (cond()) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
      l: [],
      m: []
    });
  }
};",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,OAAO,GAAGA,CAAA,KAAM;EACpB,IAAIC,IAAI,CAAC,CAAC;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;MAAAC,CAAA;MAAAC,CAAA;IAAA;EAAA;AAIZ,CAAC",
    "names": [
      "example",
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        if (cond()) {
          'use server';
          doStuff();
        }
      };
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`IfStatement > client > should skip top-level values for scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const value = 'foo bar';
if (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
    l: [value],
    m: []
  });
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,KAAK,GAAG,SAAS;AACvB,IAAIC,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA,GADJN,KAAK;IAAAO,CAAA;EAAA;AAAA",
    "names": [
      "value",
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      if (cond()) {
        'use server';
        await doStuff(value);
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`IfStatement > client > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
async function foo() {
  const value = 'foo bar';
  if (cond()) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
      l: [value],
      m: []
    });
  }
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-foo");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,eAAeA,GAAGA,CAAA,EAAG;EACnB,MAAMC,KAAK,GAAG,SAAS;EACvB,IAAIC,IAAI,CAAC,CAAC;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;MAAAC,CAAA,GADJN,KAAK;MAAAO,CAAA;IAAA;EAAA;AAKb",
    "names": [
      "foo",
      "value",
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      async function foo() {
        const value = 'foo bar';
        if (cond()) {
          'use server';
          await doStuff(value);
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`IfStatement > client > should transform valid server if statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
if (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)({
    l: [],
    m: []
  });
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,IAAIA,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;AAAA",
    "names": [
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      if (cond()) {
        'use server';
        await doStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`IfStatement > server > should skip server if statements in non-async functions 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const example = () => {
  if (cond()) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
      l: [],
      m: []
    });
  }
};",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function (closure_1) {
  const ctx_1 = $$context_1();
  try {
    $$run_1(ctx_1, doStuff);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAIUA,OAAA,CAAAC,KAAA,EAAAC,OAAO;EAAG,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "doStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
export default entry("26ecc3a5-0-example", root);",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,OAAO,GAAGA,CAAA,KAAM;EACpB,IAAIC,IAAI,CAAC,CAAC;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;MAAAC,CAAA;MAAAC,CAAA;IAAA;EAAA;AAIZ,CAAC",
    "names": [
      "example",
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        if (cond()) {
          'use server';
          doStuff();
        }
      };
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`IfStatement > server > should skip top-level values for scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const value = 'foo bar';
if (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
    l: [value],
    m: []
  });
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function (closure_1) {
  const ctx_1 = $$context_1();
  try {
    await $$run_1(ctx_1, doStuff, ctx_1.l[0]);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAIQ,MAAAA,OAAA,CAAAC,KAAA,EAAMC,OAAO,EAAAD,KAAA,CAAAE,CAAA,IAAO;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "doStuff",
          "l",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
export default entry("26ecc3a5-0-anonymous", root);",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,KAAK,GAAG,SAAS;AACvB,IAAIC,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA,GADJN,KAAK;IAAAO,CAAA;EAAA;AAAA",
    "names": [
      "value",
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      if (cond()) {
        'use server';
        await doStuff(value);
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`IfStatement > server > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
async function foo() {
  const value = 'foo bar';
  if (cond()) {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
      l: [value],
      m: []
    });
  }
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function (closure_1) {
  const ctx_1 = $$context_1();
  try {
    await $$run_1(ctx_1, doStuff, ctx_1.l[0]);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAKU,MAAAA,OAAA,CAAAC,KAAA,EAAMC,OAAO,EAAAD,KAAA,CAAAE,CAAA,IAAO;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "doStuff",
          "l",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
export default entry("26ecc3a5-0-foo", root);",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,eAAeA,GAAGA,CAAA,EAAG;EACnB,MAAMC,KAAK,GAAG,SAAS;EACvB,IAAIC,IAAI,CAAC,CAAC;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;MAAAC,CAAA,GADJN,KAAK;MAAAO,CAAA;IAAA;EAAA;AAKb",
    "names": [
      "foo",
      "value",
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      async function foo() {
        const value = 'foo bar';
        if (cond()) {
          'use server';
          await doStuff(value);
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`IfStatement > server > should transform valid server if statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
if (cond()) {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)({
    l: [],
    m: []
  });
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function (closure_1) {
  const ctx_1 = $$context_1();
  try {
    await $$run_1(ctx_1, doStuff);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAGQ,MAAAA,OAAA,CAAAC,KAAA,EAAMC,OAAO,CAAE;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "doStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
export default entry("26ecc3a5-0-anonymous", root);",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,IAAIA,IAAI,CAAC,CAAC;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;IAAAC,CAAA;IAAAC,CAAA;EAAA;AAAA",
    "names": [
      "cond",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
      "l",
      "m",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      if (cond()) {
        'use server';
        await doStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;
